modify contact us component page. uploaded logo image to contact us component, fixed alignments

--- a/E-commerce-app/src/app/contact-us/contact-us.component.css
+++ b/E-commerce-app/src/app/contact-us/contact-us.component.css
@@ -8,3 +8,10 @@ body {
     align-items: center;
     color: white;
   }
+
+  img {
+    height: auto;
+    width: 500px;
+    margin-left: 60px;
+    margin-bottom: 50px;
+  }
